--- a/packages/atest/package.json
+++ b/packages/atest/package.json
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "1171ca3deb83857f95793b3f77e6ca2714361e05"
 }
