--- a/packages/c/package.json
+++ b/packages/c/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "btest",
-  "version": "1.0.1",
+  "name": "c",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -8,6 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "gitHead": "1171ca3deb83857f95793b3f77e6ca2714361e05"
+  "license": "ISC"
 }
