--- a/packages/atest/package.json
+++ b/packages/atest/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "gitHead": "1171ca3deb83857f95793b3f77e6ca2714361e05"
+  "gitHead": "1171ca3deb83857f95793b3f77e6ca2714361e05",
+  "dependencies": {
+    "btest": "^1.0.2"
+  }
 }
