--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,12 @@
   "packages": [
     "packages/*"
   ],
+  "command": {
+    "bootstrap": {
+      "hoist": true
+    }
+  },
+  "useWorkspaces": true,
+  "npmClient": "yarn",
   "version": "independent"
 }
